# social-media-management

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/social_media_management_automation/: crew.py  main.py
src/social_media_management_automation/config/: agents.yaml  tasks.yaml
src/social_media_management_automation/tools/: social_media_publisher.py
