[project]
name = "social_media_management_automation"
version = "0.1.0"
description = "social_media_management_automation using crewAI"
authors = [{ name = "Sunny Rout", email = "sunnyrout06@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
social_media_management_automation = "social_media_management_automation.main:run"
run_crew = "social_media_management_automation.main:run"
train = "social_media_management_automation.main:train"
replay = "social_media_management_automation.main:replay"
test = "social_media_management_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
